tests/ui/half-open-range-patterns/half-open-range-pats-thir-lower-empty.stderr
error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:11:11
   |
LL |     m!(0, ..u8::MIN);
   |           ^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:14:11
   |
LL |     m!(0, ..u16::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:17:11
   |
LL |     m!(0, ..u32::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:20:11
   |
LL |     m!(0, ..u64::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:23:11
   |
LL |     m!(0, ..u128::MIN);
   |           ^^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:27:11
   |
LL |     m!(0, ..i8::MIN);
   |           ^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:30:11
   |
LL |     m!(0, ..i16::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:33:11
   |
LL |     m!(0, ..i32::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:36:11
   |
LL |     m!(0, ..i64::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:39:11
   |
LL |     m!(0, ..i128::MIN);
   |           ^^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:43:14
   |
LL |     m!(0f32, ..f32::NEG_INFINITY);
   |              ^^^^^^^^^^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:46:14
   |
LL |     m!(0f64, ..f64::NEG_INFINITY);
   |              ^^^^^^^^^^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:50:13
   |
LL |     m!('a', ..'\u{0}');
   |             ^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:11:11
   |
LL |     m!(0, ..u8::MIN);
   |           ^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:14:11
   |
LL |     m!(0, ..u16::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:17:11
   |
LL |     m!(0, ..u32::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:20:11
   |
LL |     m!(0, ..u64::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:23:11
   |
LL |     m!(0, ..u128::MIN);
   |           ^^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:27:11
   |
LL |     m!(0, ..i8::MIN);
   |           ^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:30:11
   |
LL |     m!(0, ..i16::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:33:11
   |
LL |     m!(0, ..i32::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:36:11
   |
LL |     m!(0, ..i64::MIN);
   |           ^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:39:11
   |
LL |     m!(0, ..i128::MIN);
   |           ^^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:43:14
   |
LL |     m!(0f32, ..f32::NEG_INFINITY);
   |              ^^^^^^^^^^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:46:14
   |
LL |     m!(0f64, ..f64::NEG_INFINITY);
   |              ^^^^^^^^^^^^^^^^^^^

error[E0579]: lower range bound must be less than upper
  --> $DIR/half-open-range-pats-thir-lower-empty.rs:50:13
   |
LL |     m!('a', ..'\u{0}');
   |             ^^^^^^^^^

error: aborting due to 26 previous errors

For more information about this error, try `rustc --explain E0579`.
